# mohrpy

./: .gitignore  README.md  a.py  pyproject.toml
src/mohrpy/: __init__.py  mohr2d.py  mohr3d.py  visualization.py
tests/: test_mohr2d.py  test_mohr3d.py  test_visualization.py
